# sourcerer

./: .cproject  .gitignore  .project  CMakeLists.txt  sourcerer.c  sourcerer.project
examples/hello world/: hello_world_orig.c
games/pentae/: CMakeLists.txt  emptyagent.c  emptyagent2.c  main.c  pentae.c  pentae.h  testagent.c  testagent2.c
include/: academy.h  c_parser.h  c_printer.h  c_types.h  change_proposers.h  changer.h  changer_0.h  changes.h  executor.h  membox.h  search.h  sourcerer.h  tasks.h  tree_search.h  utils.h
playground/: botidea.c  countertest.c  test.c
src/: CMakeLists.txt  academy.c  c_parser.c  c_printer.c  c_types.c  change_proposer_0.c  changer_0.c  changes.c  executor.c  main.c  membox.c  search.c  tasks.c  tree_search.c  utils.c
tests/: CMakeLists.txt  check_changer_0.c  check_executor.c  check_membox.c  check_parser.c  check_parser_and_executor.c  check_printer.c  interpreter_test.c
